--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,8 +21,11 @@
     {{#each posts as |post|}}
     <li>
       {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
     </li>
     {{/each}}
   </ol>
 </section>
 {{/if}}
+
+<script src="/javascript/add-post.js"></script>
